--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head id="#hb_head">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./src/css/html_builder.css">
     <style id="user_css" type="text/css"></style>
@@ -14,7 +14,7 @@
   </body>
 
   <script type="text/javascript">
-      (function(){
+      (function() {
         HtmlBuilder.init();
       })();
   </script>
