--- a/src/html_builder.html
+++ b/src/html_builder.html
@@ -2,12 +2,27 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/html_builder.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    -->
+
+
+    <link rel="stylesheet" href="./css/html_builder_bootstrap.css">
     <style id="user_css" type="text/css"></style>
     <script type="text/javascript" src="./js/html_builder.js"></script>
   </head>
   <body>
-    <div id="#container" style="width:100%; height:95%;">
+    <div style="margin-bottom: 5px;">
+      <select id="#hb_select_design" style="height:20px; font-size: 12px;" >
+        <option value="bootstrap">bootstrap</option>
+        <option value="plain">plain</option>
+      </select>
+    </div>
+
+    <div id="#container" style="width:100%; height:85%;">
     </div>
 
     <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
@@ -15,6 +30,23 @@
 
   <script type="text/javascript">
       (function(){
+         //select design
+        var head = document.getElementById('#hb_head');
+        var select_design = document.getElementById('#hb_select_design');
+        if(select_design.value === 'bootstrap') {
+          
+        } else if(select_design.value === 'plain') {
+
+        }
+
+        select_design.addEventListener('change', function(e) {
+          if(e.target.value === 'bootstrap') {
+
+          } else if(e.target.value === 'plain') {
+
+          }
+        });
+
         HtmlBuilder.init();
       })();
   </script>
