v_0.0.3 #12 select option 추가 기능
1.  select option 추가 기능
2. Old 버전 소스 포더 옮김
3. css 변경 기능 추가
4. Image 복사시 src 복사 안되는 문제 확인 필요

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link attr-type="cssOrder"/> <!-- for CSS order -->
-    <script type="text/javascript" src="./src/js/html_builder.js" attr-type="html_builder"></script>
+    <script type="text/javascript" src="./src/old/js/html_builder.js" attr-type="html_builder"></script>
   </head>
   <body>
     <div style="margin-bottom: 5px;">
@@ -45,13 +45,13 @@
             },
             {
               element: 'link',
-              src: './src/css/html_builder_bootstrap.css'
+              src: './src/old/css/html_builder_bootstrap.css'
             }
           ],
           plain: [
             {
               element: 'link',
-              src: './src/css/html_builder.css'
+              src: './src/old/css/html_builder.css'
             }
           ]
         };
