#41 [개선 사항] 프로그램 구조 리뉴얼
1. 기존 Layout Class의 기능 리뉴얼 중
 1) Layout의 Position및 Size를 update하는 방법 구성중
    - Element의 상대경로 및 절대경로를 구하는 방법을 확인하고 정리한다.

--- a/renewer test code/test.html
+++ b/renewer test code/test.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>HtmlBuilder Test</title>
-  
+
 </head>
 
 <body>
 </body>
 
-<script type='text/javascript'>
+<script src="./js/layoutClass.mjs"></script>
+<script type='module'>
   (function () {
   })();
 </script>
-<script src="./js/layout.js"></script>
 
 </html>
