#41 [개선 사항] 프로그램 구조 리뉴얼
1. 기존 Layout Class의 기능 리뉴얼 중
1) Event 관리 기능 변경 중 - Layout class에서 단일로 사용 할 수 있는 방법을 찾아보는 중
2) Observer 패턴 사용 방법 확인 중
3) Webpack dev-server 사용 방법 확인 중
4) .gitignore 적용

--- a/src/renewal/index.html
+++ b/src/renewal/index.html
@@ -32,7 +32,7 @@
       display: block;
     }
 
-    
+
     .hb_outline-solid {
       outline: 1px solid #000000;
     }
@@ -591,10 +591,58 @@
 <body>
 </body>
 
-<script src="./js/layoutClass.mjs"></script>
 <script src="./js/polyfill.js"></script>
-<script type='module'>
+<script type="module" src=".dist/Htmlbuilder.js"></script>
+<script type="module">
   (function () {
+
+    layoutManager.initFrameLayout(
+    {
+      element: 'div',
+      attrs: {
+        style: 'width: 90%; height: 90%; margin:5px; border: 2px solid #000'
+      }
+    }
+    ,document.body
+    );
+
+    const LayoutDiv1 = new Layout({
+      element: 'div',
+      attrs: {
+        style: 'width:300px; height:300px; padding:5px; margin:10px; border: 2px solid #000'
+      }
+    }, layoutManager.frameLayout.dom);
+
+    const LayoutDiv2 = new Layout({
+      element: 'div',
+      attrs: {
+        style: 'width:100px; height:100px; padding:5px; margin:10px; border: 2px solid #000'
+      }
+    }, layoutManager.frameLayout.dom);
+
+    const LayoutDiv3 = new Layout({
+      element: 'div',
+      attrs: {
+        style: 'width:100px; height:100px; padding:5px; margin:10px; border: 2px solid #000'
+      }
+    }, layoutManager.frameLayout.dom);
+
+    const LayoutSpan = new Layout({
+      element: 'span',
+      text: 'text'
+    }, layoutManager.frameLayout.dom);
+
+    layoutManager.frameLayout.dom.appendChild(LayoutDiv1.dom);
+    LayoutDiv1.dom.appendChild(LayoutDiv2.dom);
+    LayoutDiv1.dom.appendChild(LayoutDiv3.dom);
+    LayoutDiv2.dom.appendChild(LayoutSpan.dom);
+
+    const LayoutCopyDiv1 = LayoutDiv1.copy();
+    document.body.appendChild(LayoutCopyDiv1);
+
+    setTimeout(function () {
+      LayoutCopyDiv1.layout.delete();
+    }, 5000);
   })();
 </script>
 
